src/test/resources/mutation/error/serviceNotFound/schema.graphqls
type Mutation {
  editCustomerSimple(id: ID!): ID! @service(service: {name: "SERVICE_NOT_FOUND"})
}
